Format GCP Broker tutorial according to simple broker tutorial.